# csv2pg

./: .gitignore  README.md  pyproject.toml
src/csv2pg/: cli.py  loader.py  registry.py  transforms.py
src/csv2pg/data/: penguin.csv  wny_health.csv
