[project]
name = "csv2pg"
version = "0.1.0"
description = "Loads the Thrive-AI CSV files into a PostgreSQL database"
readme = "README.md"
authors = [
    { name = "Rob Enderle", email = "robenderleamd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.28.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "typer>=0.15.2",
]

[project.scripts]
csv2pg = "csv2pg:cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
